--- a/Sass/base/_base.scss
+++ b/Sass/base/_base.scss
@@ -20,6 +20,7 @@ a {
   max-width: 2000px;
   margin: 0 auto;
   background-color: var.$color-primery;
+  overflow-x: hidden !important;
 }
 .lets-talk-button {
   background-color: var.$color-primery;
