--- a/Sass/page/_sectionTwo.scss
+++ b/Sass/page/_sectionTwo.scss
@@ -6,7 +6,7 @@
   background-color: var.$color-primery;
   position: relative;
   padding-top: 10rem;
-
+  overflow-x: hidden;
   @include mix.respond(smallPhone) {
     padding-top: 0rem;
   }
@@ -19,6 +19,7 @@
   top: 0rem;
   height: fit-content;
   padding: 10rem 0;
+  max-width: 100vw;
 }
 
 .right-hand {
