--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ a {
   max-width: 2000px;
   margin: 0 auto;
   background-color: #07374f;
+  overflow-x: hidden !important;
 }
 
 .lets-talk-button {
@@ -437,6 +438,7 @@ a {
   background-color: #07374f;
   position: relative;
   padding-top: 10rem;
+  overflow-x: hidden;
 }
 @media only screen and (max-width: 575.98px) {
   .sectionTwo {
@@ -451,6 +453,7 @@ a {
   top: 0rem;
   height: fit-content;
   padding: 10rem 0;
+  max-width: 100vw;
 }
 
 .right-hand {
